// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshots renders correctly with count above limit 1`] = `
<span
  aria-label=" 999+"
  aria-labelledby=""
  className=""
>
  <div
    aria-label="999+"
    className="monday-style-counter monday-style-counter--size-lg monday-style-counter--kind-fill monday-style-counter--color-primary"
  >
    <span
      id="counter-"
    >
      999+
    </span>
  </div>
</span>
`;

exports[`Snapshots renders correctly with count below the limit 1`] = `
<span
  aria-label=" 1"
  aria-labelledby=""
  className=""
>
  <div
    aria-label={1}
    className="monday-style-counter monday-style-counter--size-lg monday-style-counter--kind-fill monday-style-counter--color-primary"
  >
    <span
      id="counter-"
    >
      1
    </span>
  </div>
</span>
`;
